# Chem2Json

./: .gitignore  CMakeLists.txt  README.md  chemParser.cpp  chemParser.hpp  jsonWriter.cpp  jsonWriter.hpp  main.cpp  stringUtils.hpp
input/: test.chem
output/: output.json
